Revert "more tweakes to try to get this working correctly"
This reverts commit 8686ba526516403f8fbf9d8c085ac8b49b307d4e.

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -87,12 +87,11 @@ jobs:
           }
           EOL
           
-      - name: Run BDD tests with extra diagnostic info
+      - name: Run BDD tests
         env:
           ASPNETCORE_ENVIRONMENT: Testing
           GITHUB_ACTIONS: true
-        run: |
-          dotnet test MoviesMadeEasyProject/MyBddProject.Tests/MyBddProject.Tests.csproj --filter "TestCategory!=flaky" --verbosity detailed
+        run: dotnet test MoviesMadeEasyProject/MyBddProject.Tests/MyBddProject.Tests.csproj --filter "TestCategory!=flaky" --verbosity normal
 
       - name: Run frontend tests (Jest)
         run: npm run test
